Closed Bug 1305943 Opened 9 years ago Closed 9 years ago

ALT-Space is a _standard_ Windows function, no longer working in Nightly 52.0a1

Categories

(Core :: Widget: Win32, defect, P2)

52 Branch
All
Windows
defect

Tracking

()

RESOLVED FIXED
mozilla52
Tracking Status
firefox49 --- unaffected
firefox50 --- unaffected
firefox51 --- unaffected
firefox52 + fixed

People

(Reporter: bugzilla, Assigned: masayuki)

References

Details

(Keywords: regression, Whiteboard: tpi:+)

Attachments

(1 file)

User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/53.0.2785.116 Safari/537.36 Steps to reproduce: Held down alt, pressed space, menu does not appear. Tried on 2 Windows 10 computers 1x Windows 7 VM Actual results: No menu appeared, menu should be appearing. Expected results: Hold ALT then Space in _any other windows application ever created_ see what happens. This is what should be happening. I am unsure if it's my machines or Firefox, I've rebooted a few times, thinking it was me, then tested multiple computers, then tested multiple apps then tested on VMs it SEEMS to be specifically Firefox no longer recognising this command. This needs to be put back in (if it's been removed?) as soon as humanly possible, please.
Keywords: standards, hotkeys, windows, user interface, ux, ui, accessability
Severity: normal → major
OS: Unspecified → Windows
Priority: -- → P4
Hardware: Unspecified → x86_64
Version: 51 Branch → 52 Branch
[Tracking Requested - why for this release]:
Status: UNCONFIRMED → NEW
Component: Untriaged → Widget: Win32
Ever confirmed: true
Keywords: regression
Product: Firefox → Core
Severity: major → normal
Priority: P4 → --
(In reply to Alice0775 White from comment #3) > Control Menu no longer pops up with Alt+Space > > Regression window: > https://hg.mozilla.org/integration/autoland/ > pushloghtml?fromchange=d0a451335c438bfda973c223f39ef1d47adc6973&tochange=949f > e298aefd9e21cac89122d09d633ee438ae06 > > Regressed by: Bug 1300003 Sorry I'm not following here, are you saying it's already been fixed?
No, not yet fixed. Landing of Bug 1300003 caused the problem.
Ok sorry to hassle you, I wasn't sure if it was infact "not intended to be fixed, not a bug, design choice" - I'm not fluent with programmer speak and what have you. Thanks for the help, abandon thread.
Thank you for the quick regression report! I guess that we hit a hidden bug with bug 1300003 fix. Looks like that we have a special path for Alt+Space in HandleCharMessage(): https://dxr.mozilla.org/mozilla-central/rev/66a77b9bfe5dcacd50eccf85de7c0e7e15ce0ffd/widget/windows/KeyboardLayout.cpp#2492-2499 But new code consumes Alt+Space's WM_SYSCHAR message. That's the regression cause. I'll fix this later because I want to land more risky patches as soon as possible for reducing the risk. Then, I'll be back here.
Assignee: nobody → masayuki
Status: NEW → ASSIGNED
Flags: needinfo?(masayuki)
Hardware: x86_64 → All
Priority: -- → P2
Whiteboard: tpi:+
New nightly just rolled out, still same behaviour (but perhaps it wasn't rolled into this released)
This issue is not yet fixed. You can check the fix after the status of this bug report will be Resolved Fixed.
Tracking 52+ for this regression.
Comment on attachment 8797007 [details] Bug 1305943 Don't consume following WM_SYSCHAR message for some key combinations which are reserved by the system https://reviewboard.mozilla.org/r/82632/#review81654
Attachment #8797007 - Flags: review?(m_kato) → review+
Pushed by masayuki@d-toybox.com: https://hg.mozilla.org/integration/autoland/rev/b3947e0eeeb8 Don't consume following WM_SYSCHAR message for some key combinations which are reserved by the system r=m_kato
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla52
Thanks for fixing this and sorry for my ... ranty subject for the bug. I thought this might have been a deliberate, obstinate 'we know best' change to the software. Ignoring standards bugs the **** out of me (see: Chrome titlebar iconsize under Windows 7 classic UI mode - only app I know of that disobeys Windows standards) Glad it'll be fixed, I use Windows keyboard hotkeys literally hundreds of times each day. Thanks again
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: